<resources>
    <string name="app_name">聚融</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="crong_investment_assistant">聚融网投标助手</string>
    <string name="android">Android</string>
    <string name="phone_registerNotifide">您输入的手机号码已经注册了帐号为%1$s***%2$s的帐户，请用该账户直接登录</string>
    <string name="phone_or_username">您的手机和或用户名</string>
    <string name="userformat">%1$s***%2$s</string>
    <string name="login_pw">登录密码</string>
    <string name="autoLogin">下次自动登录</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="get_verification_code">点击获取验证码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="null_captcha">验证码不能为空</string>
    <string name="next_step">下一步</string>
    <string name="readed_and_agree">已阅读并同意</string>
    <string name="protocol_of_orong">《聚融投资助手使用协议》</string>
    <string name="send_message">验证码发送成功，请查收！</string>
    <string name="phone_has_register">该手机号码已经注册</string>
    <string name="getCaptcha_too_many">今日发送次数超出限制</string>
    <string name="getCaptcha_frequently">你获取验证码过于频繁，先喝杯茶吧！</string>
    <string name="username">&#160;&#160;&#160;用户名：</string>
    <string name="null_account">帐号不能为空</string>
    <string name="short_account">帐号不能低于3个字</string>
    <string name="error_account">帐号格式不正确</string>
    <string name="password">登录密码：</string>
    <string name="same_password">登录密码与交易密码不能相同</string>
    <string name="null_password">密码不能为空</string>
    <string name="short_password">密码长度太短</string>
    <string name="error_password">密码格式不正确</string>
    <string name="number_password">登录密码不可为纯数字</string>
    <string name="null_tran_password">交易密码不能为空</string>
    <string name="short_tran_password">交易密码长度太短</string>
    <string name="error_tran_password">交易密码格式不正确</string>
    <string name="number_tran_password">交易密码不可为纯数字</string>
    <string name="pass_word_prompt">6-50位推荐组合型密码</string>
    <string name="transaction_password">交易密码：</string>
    <string name="register_and_login">注册登录</string>
    <string name="registerSuccess">注册成功！</string>
    <string name="null_phone">手机号码不能为空</string>
    <string name="uname_was_uesed"></string>
    <string name="error_phone">输入的手机号码格式不正确</string>
    <string name="error_pw_or_user">用户名或密码错误，请从新输入</string>
    <string name="no_username">该用户不存在</string>
    <string name="orong_protocol">感谢您选择聚融网投资助手提供的服务！在使用本服务前，请您务必先仔细阅读本协议以下条款：\n
1、聚融网投资助手仅为投资者提供投资及填报推荐信息的服务。同时使用独立的手机绑定及手势密码控制，保障您的账户使用安全。\n
2、投资助手运用在线存储服务，根据用户的指令和密码为用户提供指定的账户操作服务。\n
3、聚融网投资助为投资人提供投资行为的记录，投资人的投资数据以正式的投资合同为准。\n
4、聚融网将不对投资人因手机及密码丢失所导致的账户损失承担责任。但平台将严格限制账户的提现账号一定是会员指定银行账户。</string>
    <string name="recommended_num">%1$s&#160;&#160;&#160;%2$d个</string>
    <string name="has_got_brokerage">已获得佣金</string>
    <string name="will_have_got_brokerage">未到期佣金</string>
    <string name="sum">&#160;%1$.2f元</string>
    <string name="recom_member">我要推荐会员</string>
    <string name="recommentMember">推荐会员</string>
    <string name="my_recom_menber">我推荐的会员</string>
    <string name="member_has_recom">成功推荐会员</string>
    <string name="recomenber_rules_title">会员推荐规则</string>
    <string name="the_member_recom_rules">推荐前请阅读《会员推荐规则》</string>
    <string name="my_member_id">我的会员身份</string>
    <string name="recomember_gain1">被推荐人成功实名认证及银行卡认证，平台将奖励推荐人1元/次。 </string>
    <string name="recomember_rules_detail1">1、平台将在试运行后重新评估推荐费用。\n2、平台有其它优惠活动，可在此上上调推荐奖励。n\3、若您有资源进行广泛的推广，可与商务代表联络另行协商奖励规则。  </string>
    <string name="recomember_gain2" formatted="false">被推荐人成功投资，平台将奖励被推荐人贡献利的息管理费的20%给推荐人。</string>
    <string name="recomember_rules_detail2" formatted="false">1、平台利息管理费为投资人利息所得的10%。\n2、所有奖励在借款人还款时产生，若借款人违约，将不产生相关奖励。\n3、网站将根据平台的发展状况调整相关奖励方案，届时将会提前1周公告。\n4、若您有广泛的资源推荐投资人，可与商务代表联络另行协商奖励规则。\n例：被推荐人投资100万，利息收益15万，推荐人可以获得150,000.00×10%×20%=3000元</string>
    <string name="my_declared_project">我推荐的项目</string>
    <string name="project_has_declared">成功推荐项目</string>
    <string name="the_project_declared_rules">推荐前请阅读《项目推荐规则》</string>
    <string name="declare_project">推荐项目</string>
    <string name="recproject_rules_title">项目推荐规则</string>
    <string name="recoproject_gain" formatted="false">被推荐项目成功融资，平台将奖励被推荐项目融资管理费的20%给推荐人。 </string>
    <string name="recoproject_rules_detail" formatted="false">1、推荐奖励在成功融资时计算，在成功还款时结算。\n2、多人推荐同一项目时，由平台确认推荐关系。</string>
    <string name="project_name">项目名称</string>
    <string name="contact_name">联系人</string>
    <string name="contact_phone">联系人电话</string>
    <string name="demands">融资需求</string>
    <string name="cycle">融资周期</string>
    <string name="project_name_null">项目名称不能为空</string>
    <string name="project_name_toolong">项目名称最大可输入20个字</string>
    <string name="contact_name_null">联系人不能为空</string>
    <string name="contact_name_toolong">联系人最大可输入16个字</string>
    <string name="contact_phone_null">联系电话不能为空</string>
    <string name="error_contact_phone">请输入正确的电话号码或手机号码</string>
    <string name="please_input_demands">请填写您的融资需求</string>
    <string name="demands_zero">融资需求不能为零</string>
    <string name="demands_toobig">融资需求不能超过1亿</string>
    <string name="please_input_cycle">请填写融资周期</string>
    <string name="cycle_zero">融资周期不能为零</string>
    <string name="cycle_toobig">融资周期不能超过36个月</string>
    <string name="recproject_success">项目推荐成功！</string>
    <string name="recproject_fail">项目推荐失败！</string>
    <string name="not_oauthor">对不起，您的帐号还没有通过实名认证，请先到官网进行实名认证</string>
    <string name="income_str">投资10000元年可获得利息%1$.2f元</string>
    <string name="float_format">%1$.2f</string>
    <string name="my_deputied_project">我代表的项目</string>
    <string name="deputyOfInvestor">投资者代表</string>
    <string name="deputied_project_num">我是投资者代表的项目</string>
    <string name="the_deputy_rules">推荐前请阅读《投资者代表规则》</string>
    <string name="become_deputy">成为投资者代表</string>
    <string name="checking_deputy">投资着代表权限正在审核中</string>
    <string name="is_deputy_now">你已经成为投资者代表</string>
    <string name="deputy_rules_title">投资者代表规则</string>
    <string name="requestApplySuccess">发送申请成功</string>
    <string name="was_deputy">你已经是投资者代表，无需再申请</string>
    <string name="auditting">您的申请正在审核中，请等待审核</string>
    <string name="reasonTooSimple">您填写的申请理由过于简单，请继续输入</string>
    <string name="reason100Error">最大可输入100个字符，请重新输入</string>
    <string name="deputy_gain" formatted="false">被推荐项目成功融资，平台将奖励被推荐项目融资管理费的20%给推荐人。 </string>
    <string name="deputy_rules_detail" formatted="false">1、推荐奖励在成功融资时计算，在成功还款时结算。\n2、多人推荐同一项目时，由平台确认推荐关系。</string>
    <string name="str￥">￥</string>
    <string name="doinvestment">我要投资</string>
    <string name="sequ1">金额\t</string>
    <string name="sequ2">进度\t</string>
    <string name="sequ3">期限\t</string>
    <string name="sequ4">利率\t</string>
    <string name="detailof_inve">融资详情</string>
    <string name="noproject">没有可投资的项目</string>
    <string name="interest_rate_of_year">年化利率：</string>
    <string name="schedule">进度:%1$.2f</string>
    <string name="interest_rate">利率:%1$.2f</string>
    <string name="deadline">期限：%1$d月%2$d天</string>
    <string name="time_limit">期限：</string>
    <string name="indemnity">风险保障：</string>
    <string name="lave">剩余：</string>
    <string name="project_info">项目信息</string>
    <string name="contract_info">合同信息</string>
    <string name="repayed_plan">还款计划</string>
    <string name="credited_sum">授信总额：</string>
    <string name="used_sum">已用额度：</string>
    <string name="available_over">可用余额：</string>
    <string name="may_invest_sum">可投资：</string>
    <string name="set_best_sum">点击自动获取最佳投标金额</string>
    <string name="enter_invest_sum">请输入投标金额</string>
    <string name="enter_invest_password">请输入交易密码</string>
    <string name="identify_investment">确定投资</string>
    <string name="capital">本金：</string>
    <string name="interest">利息：</string>
    <string name="repayindexformatstr">第%1$s期</string>
    <string name="capture_title">拍二维码</string>
    <string name="welcomeCapture">拍码有礼</string>
    <string name="getInfo">查看资料</string>
    <string name="userFlag0">借款人</string>
    <string name="userFlag1">投资者</string>
    <string name="userFlag2">其它</string>
    <string name="wasFriend">已是好友</string>
    <string name="befriend">加为好友</string>
    <string name="memberQrcode">df</string>
    <string name="more">更多</string>
    <string name="check_update">版本更新</string>
    <string name="aboutus">关于我们</string>
    <string name="help_caption">帮助说明</string>
    <string name="callforus">联系我们</string>
    <string name="version">版本号：</string>
    <string name="update_date">更新日期</string>
    <string name="aboutus_info" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;聚融网投标助手是聚融网的一项增值服务功能，它可为方便地帮助投资者进行会员推荐以及进行优质项目的投标。考虑到手机用户的使用安全及成本，当前版本不支持充值与提现功能，当条件成熟时，我们将开展在线充值与提现功能。</string>
    <string name="caption1">1、投资者代表规则</string>
    <string name="caption2">2、会员推荐规则 </string>
    <string name="caption3">3、项目推荐规则</string>
    <string name="caption4">4、还款规则</string>
    <string name="rules_of_repay">还款规则</string>
    <string name="repay1">提前还款</string>
    <string name="repay1_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当期欠款于还款时间提前5天或5天以上的还款定义为提前还款。为了鼓励借款人提前还款，提前还款的只收取借款人还款时间的利息，提前5-30天还款，多收1天违约利息；提前30天以上还款，每超过30天，计2天违约利息，不足30天的按30天计。</string>
    <string name="repay2">正常还款</string>
    <string name="repay2_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当期欠款于还款时间提前5天或5天之内的还款定义为正常还款，按正常方式计息。</string>
    <string name="repay3">迟还款</string>
    <string name="repay3_detail" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;借款人超过借款时间还款，且在3天之内的融资是为迟还款。一旦出现迟还，其利率上浮110.00%，未来每期欠款都按相应利息计算。</string>
    <string name="repay4">逾期还款</string>
    <string name="repay4_detail" formatted="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;借款人超过借款时间3天以上，不超过90天还款，视为逾期还款。一旦出现逾期还款，其利率上浮120.00%，每次还款都按上浮利息计算。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;借款人若在同一个标中出现两次迟还，则该笔融资的状态变成逾期状态。每期按利率上浮120.00%计算。</string>
    <string name="presstel">点击可直接拨打客服电话：</string>
    <string name="service_telephone">40082011111</string>
    <string name="opinion_hint">请简要填写您的意见或是建议!（5—100字）</string>
    <string name="text_less_than_5">意见信息不能少于5个字</string>
    <string name="text_more_than_100">意见信息不能多于100个字</string>
    <string name="live_for_time">您即将退出程序，是否在看看呢</string>
    <string name="uploading_message">正在上传……请稍后</string>
    <string name="thanks_for_opinion">谢谢你的意见,我们将尽快跟进</string>
    <string name="was_resummit">您提交的意见重复了</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="exit_app">退出程序</string>
    <string name="uploadimage">上传头像</string>
    <string name="photograph">拍照</string>
    <string name="select_from_albums">从相册选择</string>
    <string name="editphoto">编辑头像</string>
    <string name="albums">相册</string>
    <string name="myorong">我的聚融</string>
    <string name="result_preview">剪切效果预览</string>
    <string name="phoneformat">(%1$s***%2$s)</string>
    <string name="uploade">上传</string>
    <string name="quit">放弃</string>
    <string name="relogin">重新登录</string>
    <string name="relogin_message">由于你长时间与服务器断开连接，您必须重新登录才能使用</string>
    <string name="requesting">正在发送请求……请稍候</string>
    <string name="no_response">请求无响应，请从新发送</string>
    <string name="server_exception">对不起，服务器出现异常请您稍后再访问</string>
    <string name="responese_exception">响应异常，请重新发送请求</string>
    <string name="timeout">请求连接超时，请重新发送请求</string>
    <string name="no_network">当前网络不可用，请检查网络设置</string>
    <string name="nullparamexception">空参数异常</string>
    <string name="cancelrequest">已取消请求</string>
    <string name="checking_captcha">正在验证……请稍候</string>
    <string name="registering">正在注册……</string>
    <string name="login_now">正在登录中……</string>
    <string name="login_success">登录成功！</string>
    <string name="loading">正在加载中……</string>
    <string name="findUpdate">发现更新</string>
    <string name="update_now">立即更新</string>
    <string name="not_yet">以后再说</string>
</resources>