<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pad3"
        android:layout_marginRight="@dimen/pad3"
        android:background="@drawable/corner_round"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/username"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/et_usernmae"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/phone_or_username"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/password"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/et_login_paw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/pass_word_prompt"
                android:password="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/transaction_password"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/et_transation_paw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/pass_word_prompt"
                android:password="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_register_and_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spa72"
        android:layout_marginLeft="@dimen/pad3"
        android:layout_marginRight="@dimen/pad3"
        android:layout_marginTop="@dimen/pad3"
        android:background="@drawable/blue_button_background_selector"
        android:text="@string/register_and_login"
        android:textColor="@color/white2"
        android:textSize="@dimen/f21" />

</LinearLayout>