<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/screen_margin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_round"
                android:minHeight="@dimen/spa180"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_top_round"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spa74"
                    android:paddingLeft="@dimen/pad3"
                    android:paddingRight="@dimen/pad3"
                    android:text="@string/repay1"
                    android:textColor="@color/white2"
                    android:textSize="@dimen/f21" />

                <TextView
                    style="@style/normal_textstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pad4"
                    android:layout_marginLeft="@dimen/pad3"
                    android:layout_marginRight="@dimen/pad3"
                    android:layout_marginTop="@dimen/pad4"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/repay1_detail"
                    android:textSize="@dimen/f21" />
            </LinearLayout>

            <LinearLayout
                style="@style/screen_margin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_round"
                android:minHeight="@dimen/spa180"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_top_round"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spa74"
                    android:paddingLeft="@dimen/pad3"
                    android:paddingRight="@dimen/pad3"
                    android:text="@string/repay2"
                    android:textColor="@color/white2"
                    android:textSize="@dimen/f21" />

                <TextView
                    style="@style/normal_textstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pad4"
                    android:layout_marginLeft="@dimen/pad3"
                    android:layout_marginRight="@dimen/pad3"
                    android:layout_marginTop="@dimen/pad4"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/repay2_detail"
                    android:textSize="@dimen/f21" />
            </LinearLayout>

            <LinearLayout
                style="@style/screen_margin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_round"
                android:minHeight="@dimen/spa180"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_top_round"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spa74"
                    android:paddingLeft="@dimen/pad3"
                    android:paddingRight="@dimen/pad3"
                    android:text="@string/repay3"
                    android:textColor="@color/white2"
                    android:textSize="@dimen/f21" />

                <TextView
                    style="@style/normal_textstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pad4"
                    android:layout_marginLeft="@dimen/pad3"
                    android:layout_marginRight="@dimen/pad3"
                    android:layout_marginTop="@dimen/pad4"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/repay3_detail"
                    android:textSize="@dimen/f21" />
            </LinearLayout>

            <LinearLayout
                style="@style/screen_margin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_round"
                android:minHeight="@dimen/spa180"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_top_round"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spa74"
                    android:paddingLeft="@dimen/pad3"
                    android:paddingRight="@dimen/pad3"
                    android:text="@string/repay4"
                    android:textColor="@color/white2"
                    android:textSize="@dimen/f21" />

                <TextView
                    style="@style/normal_textstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pad4"
                    android:layout_marginLeft="@dimen/pad3"
                    android:layout_marginRight="@dimen/pad3"
                    android:layout_marginTop="@dimen/pad4"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/repay4_detail"
                    android:textSize="@dimen/f21" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>